--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -80,6 +80,7 @@ jobs:
     needs:
     - push
     steps:
+    - uses: actions/checkout@v2
     - uses: imranismail/setup-kustomize@v1
       with:
         kustomize-version: "3.1.0"
